<?xml version="1.0" encoding="utf-8"?>
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		
		android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:padding="8dp">
	
		<TableRow android:gravity="center">
	
		    <TextView
    		    android:layout_width="fill_parent"
    		    android:layout_height="wrap_content"
    		    android:text="@string/label_date" />
		
			<EditText
				style="@style/InputDecimal.NoFocus"
				android:id="@+id/edit_date" />

		</TableRow>
		
		<TableRow android:gravity="center">
		
			<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/label_meter1" />

			<EditText
				style="@style/InputDecimal"
				android:id="@+id/edit_meter1"
				android:nextFocusDown="@+id/edit_meter2"
				android:nextFocusUp="@+id/edit_phremote" />
				
		</TableRow>
		
		<TableRow android:gravity="center">

			<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/label_meter2" />

			<EditText
				style="@style/InputDecimal"
				android:id="@id/edit_meter2"
				android:nextFocusDown="@+id/edit_cl2entry" />

		</TableRow>
		
		<TableRow android:gravity="center">
		
    		<TextView
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
				android:text="@string/label_flow" />

			<EditText
				style="@style/InputDecimal.NoFocus"
				android:id="@+id/edit_flow" />
				
		</TableRow>
		
		<TableRow android:gravity="center">
		
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/label_cl2entry" />

			<EditText
				style="@style/InputDecimal"
				android:id="@id/edit_cl2entry"
				android:nextFocusDown="@+id/edit_cl2remote" />
			
		</TableRow>
		
		<TableRow android:gravity="center">

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/label_cl2remote" />

			<EditText
				style="@style/InputDecimal"
				android:id="@id/edit_cl2remote"
				android:nextFocusDown="@+id/edit_phentry" />
			
		</TableRow>
		
		<TableRow android:gravity="center">

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/label_phentry" />

			<EditText
				style="@style/InputDecimal"
				android:id="@id/edit_phentry"
				android:nextFocusDown="@id/edit_phremote" />
			
		</TableRow>
		
		<TableRow android:gravity="center">

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/label_phremote" />

			<EditText
				style="@style/InputDecimal"
				android:id="@id/edit_phremote" 
				android:imeOptions="actionDone"
				android:nextFocusDown="@id/edit_meter1" />

		</TableRow>
		
	</TableLayout>
